--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "name-maker",
   "version": "0.0.1",
   "description": "Randomly generates various names for Iris.",
-  "main": "index.js",
+  "main": "dist/index",
+  "types": "dist/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "rm -rf ./dist && mkdir dist",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "dnd5e"
@@ -16,5 +19,8 @@
     "lodash": "^4.17.4",
     "tape": "^4.8.0",
     "typescript": "^2.5.2"
+  },
+  "devDependencies": {
+    "@types/node": "^8.0.30"
   }
 }
