--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "outDir": "./dist",
     "declaration": true
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "./**/*.spec.ts"
