--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
 - npm install
 before_script:
 - echo -e "Host $HOST\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-script: npm run publish
+script: npm run compile
 before_deploy:
 - cd dist
 deploy:
